complete form login signup not exist permission granted

--- a/CNPM/App.config
+++ b/CNPM/App.config
@@ -47,4 +47,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+	<connectionStrings>
+		<add name="QLHS" connectionString="Data Source=DESKTOP-9VP3CVF;Initial Catalog=QUANLIHOCSINH;Integrated Security=True" providerName="System.Data.SqlClient">
+		</add>
+	</connectionStrings>
 </configuration>
