--- a/CNPM/CNPM.csproj
+++ b/CNPM/CNPM.csproj
@@ -155,6 +155,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmChiTietHS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmChiTietHS.Designer.cs">
+      <DependentUpon>frmChiTietHS.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,11 +173,11 @@
     <Compile Include="frmDiem.Designer.cs">
       <DependentUpon>frmDiem.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmGiaoVien.cs">
+    <Compile Include="frmDiemHS.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmGiaoVien.Designer.cs">
-      <DependentUpon>frmGiaoVien.cs</DependentUpon>
+    <Compile Include="frmDiemHS.Designer.cs">
+      <DependentUpon>frmDiemHS.cs</DependentUpon>
     </Compile>
     <Compile Include="frmHocKy.cs">
       <SubType>Form</SubType>
@@ -203,25 +209,40 @@
     <Compile Include="frmTrangChuAD.Designer.cs">
       <DependentUpon>frmTrangChuAD.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmTrangChuHS.cs">
+    <Compile Include="frmTrangChuBGH.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmTrangChuHS.Designer.cs">
-      <DependentUpon>frmTrangChuHS.cs</DependentUpon>
+    <Compile Include="frmTrangChuBGH.Designer.cs">
+      <DependentUpon>frmTrangChuBGH.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmTrangChuGV.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTrangChuGV.Designer.cs">
+      <DependentUpon>frmTrangChuGV.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmChiTietHS.resx">
+      <DependentUpon>frmChiTietHS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDangNhap.resx">
       <DependentUpon>frmDangNhap.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmGiaoVien.resx">
-      <DependentUpon>frmGiaoVien.cs</DependentUpon>
+    <EmbeddedResource Include="frmDiemHS.resx">
+      <DependentUpon>frmDiemHS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmHocSinh.resx">
+      <DependentUpon>frmHocSinh.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTrangChuAD.resx">
       <DependentUpon>frmTrangChuAD.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmTrangChuHS.resx">
-      <DependentUpon>frmTrangChuHS.cs</DependentUpon>
+    <EmbeddedResource Include="frmTrangChuBGH.resx">
+      <DependentUpon>frmTrangChuBGH.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTrangChuGV.resx">
+      <DependentUpon>frmTrangChuGV.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
