--- a/CNPM/CNPM.csproj
+++ b/CNPM/CNPM.csproj
@@ -155,6 +155,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmBangDiemHK2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBangDiemHK2.Designer.cs">
+      <DependentUpon>frmBangDiemHK2.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmChiTietHS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,23 +179,29 @@
     <Compile Include="frmDiem.Designer.cs">
       <DependentUpon>frmDiem.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmDiemHS.cs">
+    <Compile Include="frmBangDiemHK1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmDiemHS.Designer.cs">
-      <DependentUpon>frmDiemHS.cs</DependentUpon>
+    <Compile Include="frmBangDiemHK1.Designer.cs">
+      <DependentUpon>frmBangDiemHK1.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmHocKy.cs">
+    <Compile Include="frmGiaoVien.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmHocKy.Designer.cs">
-      <DependentUpon>frmHocKy.cs</DependentUpon>
+    <Compile Include="frmGiaoVien.Designer.cs">
+      <DependentUpon>frmGiaoVien.cs</DependentUpon>
     </Compile>
     <Compile Include="frmHocSinh.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmHocSinh.Designer.cs">
       <DependentUpon>frmHocSinh.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmKetQuaCuoiNam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmKetQuaCuoiNam.Designer.cs">
+      <DependentUpon>frmKetQuaCuoiNam.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLichHoc.cs">
       <SubType>Form</SubType>
@@ -223,6 +235,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmBangDiemHK2.resx">
+      <DependentUpon>frmBangDiemHK2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmChiTietHS.resx">
       <DependentUpon>frmChiTietHS.cs</DependentUpon>
     </EmbeddedResource>
@@ -232,11 +247,20 @@
     <EmbeddedResource Include="frmDiem.resx">
       <DependentUpon>frmDiem.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmDiemHS.resx">
-      <DependentUpon>frmDiemHS.cs</DependentUpon>
+    <EmbeddedResource Include="frmBangDiemHK1.resx">
+      <DependentUpon>frmBangDiemHK1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGiaoVien.resx">
+      <DependentUpon>frmGiaoVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmHocSinh.resx">
       <DependentUpon>frmHocSinh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmKetQuaCuoiNam.resx">
+      <DependentUpon>frmKetQuaCuoiNam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLichHoc.resx">
+      <DependentUpon>frmLichHoc.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTrangChuAD.resx">
       <DependentUpon>frmTrangChuAD.cs</DependentUpon>
